# min_llm_inference

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.sh
doc/: debug_in_vscode.md  min_llm_inferencekernels.html  rfc_paged_attention.md
include/: constants.h  feed_forward.h  feed_forward.hpp  inference_model.h  inferencer.h  item_storage.h  items_storage.h  layers.h  model.h  paged_item_storage.h  tensor.h  tensor.hpp  throughput_counter.h  utils.h
include/kernels/: decoder.h  encoder.h  gemm.cuh  gemm.h  paged_attention.h  rand_assign.h  self_attention.h  self_attention_inference_optimized.h  softmax.h  templated_kernels.cuh  utils.cuh
src/: feed_forward.cpp  inference_model.cpp  inferencer.cpp  item_storage.cpp  items_storage.cpp  layers.cpp  paged_item_storage.cpp  tensor.cpp  throughput_counter.cpp  utils.cpp
src/kernels/: decoder.cu  encoder.cu  gemm.cu  paged_attention.cu  paged_attention_cublas.cu  paged_attention_kernels.cu  rand_assign.cu  self_attention.cu  self_attention_inference_optimized.cu  softmax.cu  utils.cu
tests/: decoder_test.cpp  encoder_test.cpp  feed_forward_layer_test.cpp  gemm_test.cpp  inferencer_test.cpp  item_storage_test.cpp  paged_attention_cublas_test.cpp  paged_attention_kernels_test.cpp  paged_attention_vs_naive_attention_test.cpp  paged_cubluas_for_profile.cpp  paged_for_profile.cpp  paged_item_storage_test.cpp  self_attention_inference_optimized_test.cpp  self_attention_test.cpp  softmax_test.cpp  test_utils.cpp  warp_tiling_test.cpp
tests/include/: self_attention_inference_optimized_host.h  test_utils.h
